<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fetched_books_header_txt"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fetchedPager"
        android:layout_width="310dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_home_button_txt"
        android:id="@+id/fetched_to_homeBtn"
        android:layout_marginBottom="58dp"
        android:drawableLeft="@drawable/home"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/footer_txt"
        android:id="@+id/textView10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likeBtn_txt"
        android:id="@+id/button"
        android:layout_below="@+id/fetchedPager"
        android:layout_alignLeft="@+id/fetchedPager"
        android:layout_alignStart="@+id/fetchedPager"
        android:drawableLeft="@drawable/unlike"
        android:layout_marginTop="39dp"
        android:layout_marginLeft="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlikeBtn_txt"
        android:id="@+id/button2"
        android:drawableLeft="@drawable/like"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

</RelativeLayout>